<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/MainViewGroup"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context="com.example.android.tabletennisscorekeeper.GameSettingsActivity">

    <android.support.v7.widget.CardView
        style="@style/CardViewWidget"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            style="@style/CardViewContentLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                style="@style/CardViewTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/players_label" />

            <EditText
                android:id="@+id/first_player_name"
                style="@style/EditTextFields"
                android:layout_width="@dimen/cardview_content_width"
                android:layout_height="wrap_content"
                android:hint="@string/first_player" />

            <TextView
                style="@style/CardViewSubTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/versus" />

            <EditText
                android:id="@+id/second_player_name"
                style="@style/EditTextFields"
                android:layout_width="@dimen/cardview_content_width"
                android:layout_height="wrap_content"
                android:hint="@string/second_player" />

            <TextView
                style="@style/CardViewTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/games_amount_label" />

            <RadioGroup
                android:id="@+id/games_quantity_rg"
                android:layout_width="@dimen/cardview_content_width"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/games_quantity_3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="3" />

                <RadioButton
                    android:id="@+id/games_quantity_5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="5" />
            </RadioGroup>

            <TextView
                style="@style/CardViewTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/points_amount_label" />

            <RadioGroup
                android:id="@+id/points_quantity_rg"
                android:layout_width="@dimen/cardview_content_width"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/points_quantity_11"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="11" />

                <RadioButton
                    android:id="@+id/points_quantity_21"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="21" />
            </RadioGroup>

            <Button
                style="@style/StartBtn"
                android:id="@+id/start_game_button"
                android:layout_width="@dimen/cardview_content_width"
                android:layout_height="wrap_content"
                android:onClick="submitGameSettings"
                android:text="@string/start_btn" />
        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>
