<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/MainViewGroup"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.tabletennisscorekeeper.MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            style="@style/LogoName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/app_name" />

        <ImageView
            style="@style/LogoImage"
            android:layout_width="@dimen/app_logo_size"
            android:layout_height="@dimen/app_logo_size"
            android:src="@drawable/ic_ping_pong" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <Button
            style="@style/ActivityMainBtn"
            android:id="@+id/rules_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rules_btn" />

        <View
            style="@style/ActivityMainDivider"
            android:layout_width="1dp"
            android:layout_height="match_parent" />

        <Button
            style="@style/ActivityMainBtn"
            android:id="@+id/new_game_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/new_game_btn" />

    </LinearLayout>

</RelativeLayout>
